[TTDB-1195] Reworked `delete dump operation` to `delete operation data` - Added endpoint `DELETE /operation/{internal_operation_id}` - Removed endpoint `DELETE /api/stateless/dump`
